--- a/thank-you.html
+++ b/thank-you.html
@@ -13,7 +13,7 @@
 
     <main>
         <p>Thank you for registering with Delta Numeric Club! Please check your email for confirmation.</p>
-        <a href="index.html">Back to Home</a>
+        <a href="Index.html">Back to Home</a>
     </main>
 </body>
 </html> 
