--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <main>
         <h2>Register to Join the Club</h2>
 
-        <form id="registrationForm" action="https://forms.gle/mq8CDu8XaWuyKGii8/aufeshakh853@gmail.com" method="POST">
+        <form id="registrationForm" action="https://formsubmit.co/aufeshakh853@gmail.com" method="POST">
    
           <input type="hidden" name="_subject" value="New Delta Numeric Club Registration">
             <input type="hidden" name="_captcha" value="false">
