--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
    
           <input type="hidden" name="_subject" value="New Delta Numeric Club Registration">
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="thank-you.html"> <!-- Redirect after submission -->
+            <<input type="hidden" name="_next" value="https://https://giaufe.github.io/Dnc/thank-you.html"> <!-- Redirect after submission -->
             <input type="hidden" name="_autoresponse" value="Thank you for registering with Delta Numeric Club! We’ll contact you soon.">
 
             <label for="regName">Full Name:</label>
