--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,23 @@
 
         <p id="registerFeedback"></p>
     </main>
+<form id="registrationForm" action="https://formsubmit.co/YOUR_EMAIL" method="POST">
+    <input type="hidden" name="_next" value="/thank-you.html"> <!-- Fix path -->
+    <input type="hidden" name="_subject" value="New Delta Numeric Club Registration">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_autoresponse" value="Thank you for registering with Delta Numeric Club!">
 
+    <label for="regName">Full Name:</label>
+    <input type="text" id="regName" name="name" required>
+
+    <label for="regEmail">Email:</label>
+    <input type="email" id="regEmail" name="email" required>
+
+    <label for="regPassword">Password:</label>
+    <input type="password" id="regPassword" name="password" required>
+
+    <button type="submit">Register</button>
+</form>
     <script src="script.js"></script>
 </body>
 </html>
